tests/paczka1/fuzzy1/80247061.err
Error in line 2: a0Wy A509 7,7
Error in line 1: vpQ2mIEgyKt A582 52,3
Error in line 9: a0Wy S651 -3,1
Error in line 18: ucn S875 15,9
Error in line 20: ucn S651 34,1
Error in line 3: a0Wy S651 57,5
Error in line 26: ucn S875 1,2
Error in line 29: a0Wy A582 30,2
Error in line 31: a0Wy S651 48,0
